--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
           <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
             <!-- <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg> -->
-            <span class="fs-4">Lab 5: Fish Species Predictor</span>
+            <span class="fs-4">Fish Clasifier</span>
           </a>
         </header>
     </div>
@@ -20,7 +20,7 @@
         <div class="p-5 text-center bg-body-tertiary rounded-3">
           <h1 class="text-body-emphasis">Predict your fish!</h1>
           <p class="col-lg-8 mx-auto fs-5 text-muted">
-            Introducing our Fish Species Predictor! 🐟🐠🐡🦈 <br> Accurately identify Bream, Roach, Whitefish, Parkki, Perch, Pike, and Smelt based on weight, length, height, and width using advanced machine learning.
+            Try out our Fish Classifier! 🐟🐠🐡🦈 <br> Accurately identify Bream, Roach, Whitefish, Parkki, Perch, Pike, and Smelt based on weight, length, height, and width using advanced machine learning.
           </p>
           <hr class="my-4">
           <div class="d-inline-flex gap-2 mb-5">
@@ -35,17 +35,17 @@
                 <div class="input-group mb-1">
                     <div class="form-floating">
                         <input type="number" class="form-control" id="Length1" placeholder="0" name="Length1" step="any">
-                        <label for="Length1">Length 1</label>
+                        <label for="Length1">Standard Length</label>
                       </div>
                     
                     <div class="form-floating">
                       <input type="number" class="form-control" id="Length2" placeholder="0"  name="Length2" step="any">
-                      <label for="Length2">Length 2</label>
+                      <label for="Length2">Fork Length</label>
                     </div>
     
                     <div class="form-floating">
                         <input type="number" class="form-control" id="Length3" placeholder="0"  name="Length3" step="any">
-                        <label for="Length3">Length 3</label>
+                        <label for="Length3">Total Length</label>
                     </div>
                 </div>
 
